<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".UI.AddHelpSessionActivity">

    <EditText
        android:id="@+id/NameOfHelpSession"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_session_name"
        android:inputType="textAutoCorrect"
        android:importantForAutofill="no"
        android:focusedByDefault="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NameOfCreator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_session_creator"
        android:inputType="textAutoCorrect"
        android:autofillHints=".AUTOFILL_HINT_NAME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameOfHelpSession" />

    <Button
        android:id="@+id/CreateHelpSessionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_create_session"
        app:layout_constraintTop_toBottomOf="@+id/NameOfCreator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
